--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p>this is a new repo day two .</p>
 <p>playing with new branch named feature2c\</p>
-<p>also this (button)</p>
+<p>also this(button)
+</p>
