--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <p>this is a new repo day two .</p>
-<p>playing with new branch named feature2c\</p>
-<p>also this
-</p>
+<p>playing with new branch named feature2</p>
+<p>playing with merge command (button)</p>
